--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -46,12 +46,14 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-     <Compile Include="Assets\Scripts\CubeBoxGenerator.cs" />
-     <Compile Include="Assets\Scripts\D3MapGenerator.cs" />
      <Compile Include="Assets\Scripts\Fader.cs" />
      <Compile Include="Assets\Scripts\LifeEngine.cs" />
-     <Compile Include="Assets\Scripts\MapGenerator.cs" />
-     <Compile Include="Assets\Scripts\MeshGenerator.cs" />
+     <Compile Include="Assets\Scripts\LukesBox\CubeBoxGenerator.cs" />
+     <Compile Include="Assets\Scripts\LukesBox\D3MapGenerator.cs" />
+     <Compile Include="Assets\Scripts\SuperCube\Edge3DMapGenerator.cs" />
+     <Compile Include="Assets\Scripts\SuperCube\Edge3DMeshGenerator.cs" />
+     <Compile Include="Assets\Scripts\TwoDimensional\MapGenerator.cs" />
+     <Compile Include="Assets\Scripts\TwoDimensional\MeshGenerator.cs" />
      <None Include="Assets\Standard Assets\Environment\Water (Basic)\Shaders\FXWaterBasic.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
