--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -54,6 +54,7 @@
      <Compile Include="Assets\Scripts\SuperCube\Edge3DMeshGenerator.cs" />
      <Compile Include="Assets\Scripts\TwoDimensional\MapGenerator.cs" />
      <Compile Include="Assets\Scripts\TwoDimensional\MeshGenerator.cs" />
+     <Compile Include="Assets\SuperCubeController.cs" />
      <None Include="Assets\Standard Assets\Environment\Water (Basic)\Shaders\FXWaterBasic.shader" />
  <Reference Include="UnityEngine.UI">
  <HintPath>/Applications/Unity/Unity.app/Contents/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
